--- a/tuner.html
+++ b/tuner.html
@@ -24,11 +24,44 @@
         position: relative;
         text-align: center;
       }
+      .settings {
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        opacity: 0;
+        transition: opacity 0.5s;
+        padding: 10px;
+        font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI',
+          Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue',
+          sans-serif;
+      }
+      .settings:hover,
+      .settings:focus,
+      .settings:focus-within {
+        opacity: 1;
+      }
+      select {
+        background: #000;
+        border: 1px solid #656463;
+        color: #8b8685;
+        font-family: inherit;
+      }
     </style>
   </head>
   <body>
     <canvas id="historyCanvas" width="480" height="320"></canvas>
     <canvas id="canvas" width="480" height="320"></canvas>
+    <div class="settings">
+      <select id="notation">
+        <option value="roland">Pitch notation: Roland (C3 = middle C)</option>
+        <option value="yamaha">Pitch notation: Yamaha (C4 = middle C)</option>
+        <option value="cakewalk">
+          Pitch notation: Cakewalk (C5 = middle C)
+        </option>
+      </select>
+    </div>
     <div id="micNeeded" hidden>
       Need microphone access
       <button id="grant">Grant</button>
